--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -6,11 +6,12 @@ services:
     security_opt:
       - seccomp:unconfined
     environment:
-      OPEN_AI_API_KEY: 'YOUR API KEY'
-      MODEL: 'gpt-3.5-turbo'
+      OPEN_AI_API_KEY: 'K6bMHUUcyupBAEcr9YOSxzNBGGHoAjI7Ny99VnMN1Vc'
+      open_ai_api_base: 'https://chimeragpt.adventblocks.cc/api/v1'
+      MODEL: 'gpt-3.5-turbo-16k'
       PROXY: ''
-      SINGLE_CHAT_PREFIX: '["bot", "@bot"]'
-      SINGLE_CHAT_REPLY_PREFIX: '"[bot] "'
+      SINGLE_CHAT_PREFIX: '[""]'
+      SINGLE_CHAT_REPLY_PREFIX: '"[] "'
       GROUP_CHAT_PREFIX: '["@bot"]'
       GROUP_NAME_WHITE_LIST: '["ChatGPT测试群", "ChatGPT测试群2"]'
       IMAGE_CREATE_PREFIX: '["画", "看", "找"]'
